Fixed grid height on mobile.

--- a/css/docs.css
+++ b/css/docs.css
@@ -166,6 +166,7 @@ h2 {
 }
 .grid-demo div[class^='pwn-'] {
   background-color: rgba(255, 130, 0, 0.25);
+  height: 40px;
 }
 .grid-demo .grid-overlay {
   position: absolute;
