--- a/less/examples.less
+++ b/less/examples.less
@@ -97,6 +97,7 @@
 
 	div[class^='pwn-'] {
 		background-color: @grid-example-padding-bg;
+		height: 40px;
 	}
 
 	.grid-overlay {
